--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "shiftcinema",
   "version": "0.1.0",
-  "homepage": "https://github.io/dddttttttt/shiftCinema",
-  "private": true,
+  "homepage": "https://github.io/dddttttttt/shiftCinema/#",
+  "private": false,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
