--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shiftcinema",
   "version": "0.1.0",
-  "homepage": "https://dddttttttt.github.io/shiftCinema",
+  "homepage": "https://dddttttttt.github.io/shiftCinema/#",
   "private": false,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
